--- a/src/main/assets/webapp/WEB-INF/web.xml
+++ b/src/main/assets/webapp/WEB-INF/web.xml
@@ -16,7 +16,7 @@ See LICENSE in base folder
   </jsp-property-group>
   <context-param>
     <param-name>fctAppCls</param-name>
-    <param-value>org.beigesoft.accandr.FctAppAndr</param-value>
+    <param-value>org.beigesoft.accandr.FctAppAndrMdb</param-value>
   </context-param>
   <context-param>
     <param-name>newDbId</param-name>
@@ -36,7 +36,7 @@ See LICENSE in base folder
   </context-param>
   <context-param>
     <param-name>wrReSpTr</param-name>
-    <param-value>false</param-value>
+    <param-value>true</param-value>
   </context-param>
   <context-param>
     <param-name>fastLoc</param-name>
