--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-checkstyle-plugin</artifactId>
-            <version>2.17</version>
+            <version>3.1.0</version>
             <executions>
               <execution>
               <id>checkstyle</id>
@@ -167,16 +167,16 @@
             </configuration>
           </plugin>
           <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>findbugs-maven-plugin</artifactId>
-            <version>3.0.3</version>
+            <groupId>com.github.spotbugs</groupId>
+            <artifactId>spotbugs-maven-plugin</artifactId>
+            <version>3.1.12.2</version>
             <configuration>
               <excludeFilterFile>findbug-exclude.xml</excludeFilterFile>
             </configuration>
             <executions>
               <execution>
-              <id>findbugs</id>
-              <phase>compile</phase>
+              <id>spotbugs</id>
+              <phase>verify</phase>
               <goals>
                 <goal>check</goal>
               </goals>
@@ -186,7 +186,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-pmd-plugin</artifactId>
-            <version>3.6</version>
+            <version>3.12.0</version>
             <configuration>
               <printFailingErrors>true</printFailingErrors>
               <excludes>
@@ -197,7 +197,7 @@
             <executions>
               <execution>
               <id>pmd</id>
-              <phase>compile</phase>
+              <phase>verify</phase>
               <goals>
                 <goal>check</goal>
               </goals>
@@ -300,7 +300,7 @@
     <!--<resources>
       Duplicates problem. maven-shade-plugin is useless. Dependences order does matter for "the first file occurrence", but not always - cmnst.xml is wrong?!
       This project's files must be at the target APK, but it is not! Files from JAR dependences sometimes have high priority!?
-      Coping (either into final project or these resources entries) - cmnst.xml is still wrong (from blc-test.jar)!?
+      Coping (either into final project or these resources entries) - cmnst.xml is still wrong (from beige-acc.jar)!?
       <resource>
         <directory>..${file.separator}beige-blc${file.separator}src${file.separator}test${file.separator}resources</directory>
       </resource>
@@ -324,7 +324,7 @@
       <plugin>
         <groupId>com.simpligility.maven.plugins</groupId>
         <artifactId>android-maven-plugin</artifactId>
-        <version>4.5.0</version>
+        <version>4.6.0</version>
         <configuration>
           <dex>
             <multiDex>true</multiDex>
