--- a/src/main/assets/webapp/WEB-INF/web.xml
+++ b/src/main/assets/webapp/WEB-INF/web.xml
@@ -16,7 +16,7 @@ See LICENSE in base folder
   </jsp-property-group>
   <context-param>
     <param-name>fctAppCls</param-name>
-    <param-value>org.beigesoft.accandr.FctAppAndrMdb</param-value>
+    <param-value>org.beigesoft.accandr.FctAppAndra</param-value>
   </context-param>
   <context-param>
     <param-name>iniBdFctCls</param-name>
