--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -59,8 +59,14 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
       <intent-filter>
         <action android:name="org.beigesoft.accandr.START" />
         <action android:name="org.beigesoft.accandr.STOP" />
-      </intent-filter>
+       </intent-filter>
     </service>
+
+    <receiver android:name=".Shutdown">
+      <intent-filter>
+        <action android:name="android.intent.action.ACTION_SHUTDOWN"/>
+      </intent-filter>
+    </receiver>
 
   </application>
 
