--- a/pom.xml
+++ b/pom.xml
@@ -213,7 +213,7 @@
     <dependency>
       <groupId>org.beigesoft</groupId>
       <artifactId>beige-accjet</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0</version>
       <exclusions>
         <exclusion>
           <groupId>org.xerial</groupId>
@@ -244,7 +244,7 @@
     <dependency>
       <groupId>com.github.demidenko05</groupId>
       <artifactId>a-jetty-base</artifactId>
-      <version>1.0.5-SNAPSHOT</version>
+      <version>1.0.5</version>
       <exclusions>
         <exclusion>
           <groupId>org.bouncycastle</groupId>
@@ -269,23 +269,29 @@
     <dependency>
       <groupId>org.beigesoft</groupId>
       <artifactId>beige-logging-android</artifactId>
-      <version>1.0.3-SNAPSHOT</version>
+      <version>1.0.3</version>
     </dependency>
     <dependency>
-        <groupId>com.sun.mail</groupId>
-        <artifactId>android-mail</artifactId>
-        <version>1.5.6</version>
+      <groupId>com.sun.mail</groupId>
+      <artifactId>android-mail</artifactId>
+      <version>1.5.6</version>
     </dependency>
     <dependency>
-        <groupId>com.sun.mail</groupId>
-        <artifactId>android-activation</artifactId>
-        <version>1.5.6</version>
+      <groupId>com.sun.mail</groupId>
+      <artifactId>android-activation</artifactId>
+      <version>1.5.6</version>
     </dependency>
     <dependency>
       <groupId>com.google.android</groupId>
       <artifactId>android</artifactId>
       <version>4.1.1.4</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.android.support</groupId>
+      <artifactId>support-v4</artifactId>
+      <version>28.0.0</version>
+      <type>aar</type>
     </dependency>
     <dependency>
       <groupId>com.android.support</groupId>
