--- a/pom.xml
+++ b/pom.xml
@@ -288,7 +288,7 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.android.support</groupId>
+      <groupId>com.android.support</groupId><!--TODO exclude useless-->
       <artifactId>support-v4</artifactId>
       <version>28.0.0</version>
       <type>aar</type>
