--- a/pom.xml
+++ b/pom.xml
@@ -213,7 +213,7 @@
     <dependency>
       <groupId>org.beigesoft</groupId>
       <artifactId>beige-accjet</artifactId>
-      <version>1.0</version>
+      <version>1.1-SNAPSHOT</version>
       <exclusions>
         <exclusion>
           <groupId>org.xerial</groupId>
@@ -288,7 +288,7 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.android.support</groupId><!--TODO exclude useless-->
+      <groupId>com.android.support</groupId><!--TODO exclude useless? it seems that it doesn't increase the APK size-->
       <artifactId>support-v4</artifactId>
       <version>28.0.0</version>
       <type>aar</type>
