--- a/proguard.cfg
+++ b/proguard.cfg
@@ -103,7 +103,7 @@
 -injars
 <user.home>/git/beige-accandr/target/unpacked-libs/cas_localbroadcastmanager_28.0.0/classes.jar(!META-INF/*.SF,!META-INF/*.RSA,!META-INF/*.DSA,!**.properties,!META-INF/LICENSE.txt,!META-INF/maven/**,!META-INF/MANIFEST.MF)
 
-#-ignorewarnings
+-ignorewarnings
 
 -dontwarn org.slf4j.*
 -dontwarn android.support.**
