--- a/proguard.cfg
+++ b/proguard.cfg
@@ -21,7 +21,7 @@
 -injars
 <user.home>/.m2/repository/com/github/demidenko05/taglibs-standard-spec/1.0.5/taglibs-standard-spec-1.0.5.jar(!META-INF/*.SF,!META-INF/*.RSA,!META-INF/*.DSA,!META-INF/LICENSE.txt,!META-INF/maven/**,!META-INF/MANIFEST.MF)
 -injars
-<user.home>/.m2/repository/com/github/demidenko05/taglibs-standard-impl/1.0.5/taglibs-standard-impl-1.0.5.jar(!META-INF/*.SF,!META-INF/*.RSA,!META-INF/*.DSA,!META-INF/LICENSE.txt,!META-INF/maven/**,!META-INF/MANIFEST.MF)
+<user.home>/.m2/repository/com/github/demidenko05/taglibs-standard-impl/1.0.5/taglibs-standard-impl-1.0.5.jar(!META-INF/*.tld,!META-INF/*.SF,!META-INF/*.RSA,!META-INF/*.DSA,!META-INF/LICENSE.txt,!META-INF/maven/**,!META-INF/MANIFEST.MF)
 -injars
 <user.home>/.m2/repository/javax/servlet/javax.servlet-api/3.1.0/javax.servlet-api-3.1.0.jar(!META-INF/*.SF,!META-INF/*.RSA,!META-INF/*.DSA,!META-INF/LICENSE.txt,!META-INF/maven/**,!META-INF/MANIFEST.MF)
 -injars
