use non-snapshot

--- a/proguard.cfg
+++ b/proguard.cfg
@@ -31,13 +31,13 @@
 -injars
 <user.home>/.m2/repository/org/bouncycastle/bcpkix-jdk15on/1.67/bcpkix-jdk15on-1.67.jar(!META-INF/*.SF,!META-INF/*.RSA,!META-INF/*.DSA,!META-INF/LICENSE.txt,!META-INF/maven/**,!META-INF/versions/**,!META-INF/MANIFEST.MF)
 -injars
-<user.home>/.m2/repository/org/beigesoft/beige-blc/1.1-SNAPSHOT/beige-blc-1.1-SNAPSHOT.jar(!sqlite/**,!dbcp/**,!uvd/**,!postgres/**,!mysql/**,!org/beigesoft/jdbc/**,!META-INF/*.SF,!META-INF/*.RSA,!META-INF/*.DSA,!**.properties,!META-INF/LICENSE.txt,!META-INF/maven/**,!META-INF/versions/**,!META-INF/MANIFEST.MF)
+<user.home>/.m2/repository/org/beigesoft/beige-blc/1.1/beige-blc-1.1.jar(!sqlite/**,!dbcp/**,!uvd/**,!postgres/**,!mysql/**,!org/beigesoft/jdbc/**,!META-INF/*.SF,!META-INF/*.RSA,!META-INF/*.DSA,!**.properties,!META-INF/LICENSE.txt,!META-INF/maven/**,!META-INF/versions/**,!META-INF/MANIFEST.MF)
 -injars
 <user.home>/.m2/repository/org/beigesoft/beige-web-jar/1.0/beige-web-jar-1.0.jar(!META-INF/*.SF,!META-INF/*.RSA,!META-INF/*.DSA,!META-INF/LICENSE.txt,!META-INF/maven/**,!META-INF/MANIFEST.MF)
 -injars
-<user.home>/.m2/repository/org/beigesoft/beige-acc/1.1-SNAPSHOT/beige-acc-1.1-SNAPSHOT.jar(!fonts/**,!ws/**,!acimp/**,!acc/**,!sqlite/**,!dbcp/**,!uvd/**,!postgres/**,!mysql/**,!META-INF/*.SF,!META-INF/*.RSA,!META-INF/*.DSA,!**.properties,!META-INF/LICENSE.txt,!META-INF/maven/**,!META-INF/versions/**,!META-INF/MANIFEST.MF)
+<user.home>/.m2/repository/org/beigesoft/beige-acc/1.1/beige-acc-1.1.jar(!fonts/**,!ws/**,!acimp/**,!acc/**,!sqlite/**,!dbcp/**,!uvd/**,!postgres/**,!mysql/**,!META-INF/*.SF,!META-INF/*.RSA,!META-INF/*.DSA,!**.properties,!META-INF/LICENSE.txt,!META-INF/maven/**,!META-INF/versions/**,!META-INF/MANIFEST.MF)
 -injars
-<user.home>/.m2/repository/org/beigesoft/beige-accjet/1.1-SNAPSHOT/beige-accjet-1.1-SNAPSHOT.jar(!**.png,!org/beigesoft/ajetty/jdbc/**,!META-INF/*.SF,!META-INF/*.RSA,!META-INF/*.DSA,!**.properties,!META-INF/LICENSE.txt,!META-INF/maven/**,!META-INF/MANIFEST.MF)
+<user.home>/.m2/repository/org/beigesoft/beige-accjet/1.1/beige-accjet-1.1.jar(!**.png,!org/beigesoft/ajetty/jdbc/**,!META-INF/*.SF,!META-INF/*.RSA,!META-INF/*.DSA,!**.properties,!META-INF/LICENSE.txt,!META-INF/maven/**,!META-INF/MANIFEST.MF)
 -injars
 <user.home>/.m2/repository/com/sun/mail/android-mail/1.6.5/android-mail-1.6.5.jar(!META-INF/*.SF,!META-INF/*.RSA,!META-INF/*.DSA,!**.properties,!META-INF/LICENSE.txt,!META-INF/maven/**,!META-INF/MANIFEST.MF)
 -injars
