--- a/pom.xml
+++ b/pom.xml
@@ -232,7 +232,7 @@
     <dependency>
       <groupId>org.beigesoft</groupId>
       <artifactId>beige-accjet</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>1.1</version>
       <exclusions>
         <exclusion>
           <groupId>org.xerial</groupId>
