--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.beigesoft</groupId>
-  <version>1.2-SNAPSHOT</version>
+  <version>1.1-SNAPSHOT</version>
   <artifactId>beige-accandr</artifactId>
   <packaging>apk</packaging>
   <name>Beigesoft™ Enterprise Information System standalone WEB-application for Android.</name>
@@ -67,7 +67,7 @@
               <zipalign>
                 <verbose>true</verbose>
                 <inputApk>${project.build.directory}${file.separator}${project.artifactId}.apk</inputApk>
-                <outputApk>${project.build.directory}${file.separator}${project.artifactId}-sa.apk</outputApk>
+                <outputApk>${project.build.directory}${file.separator}${project.artifactId}-aligned.apk</outputApk>
                 <skip>false</skip>  
               </zipalign>
             </configuration>
@@ -110,9 +110,10 @@
                       <arg value="18" />
                       <arg value="--max-sdk-version" />
                       <arg value="30" />
-                      <arg value="${project.build.directory}${file.separator}${project.artifactId}-sa.apk" />
+                      <arg value="${project.build.directory}${file.separator}${project.artifactId}-aligned.apk" />
                     </exec>
                     <delete file="${project.build.directory}${file.separator}${project.artifactId}.apk" />
+                    <attachartifact file="${project.build.directory}${file.separator}${project.artifactId}-aligned.apk.idsig" classifier="aligned.apk" type="idsig"/>
                   </target>
                 </configuration>
               </execution>
