--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.beigesoft</groupId>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.1</version>
   <artifactId>beige-accandr</artifactId>
   <packaging>apk</packaging>
   <name>Beigesoft™ Enterprise Information System standalone WEB-application for Android.</name>
@@ -113,7 +113,7 @@
                       <arg value="${project.build.directory}${file.separator}${project.artifactId}-aligned.apk" />
                     </exec>
                     <delete file="${project.build.directory}${file.separator}${project.artifactId}.apk" />
-                    <attachartifact file="${project.build.directory}${file.separator}${project.artifactId}-aligned.apk.idsig" classifier="aligned.apk" type="idsig"/>
+                    <attachartifact file="${project.build.directory}${file.separator}${project.artifactId}-aligned.apk.idsig" classifier="aligned.apk" type="idsig" />
                   </target>
                 </configuration>
               </execution>
@@ -489,7 +489,7 @@
     <url>https://github.com/demidenko05/beige-accandr.git</url>
     <connection>scm:git:git@github.com:demidenko05/beige-accandr.git</connection>
     <developerConnection>scm:git:git@github.com:demidenko05/beige-accandr.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>beige-accandr-1.1</tag>
   </scm>
 
 </project>
