readme, dependency bs-andr-graph

--- a/pom.xml
+++ b/pom.xml
@@ -243,6 +243,11 @@
       </exclusions>
     </dependency>
     <dependency>
+      <groupId>org.beigesoft</groupId>
+      <artifactId>beige-graphic-android</artifactId>
+      <version>1.0.0</version>
+   </dependency>
+   <dependency>
       <groupId>org.bouncycastle</groupId>
       <artifactId>bcprov-jdk15on</artifactId>
       <version>1.67</version>
